--- a/system/taalbots.properties
+++ b/system/taalbots.properties
@@ -4,6 +4,6 @@
 ["default-property", "unknown"],
 ["default-map", "unknown"],
 ["sentence-splitters", "+@,!?。？！"],
-["learn-filename", "training.aiml"],
+["learn-filename", "pand_learn.aiml"],
 ["max-learn-file-size", "1000000"]
 ]
